--- a/views/home.hbs
+++ b/views/home.hbs
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <Center><h1>ATN Toy Store</h1></Center>
+    <Center><h1 style="color:skyblue;">ATN Toy Store</h1></Center>
+    <center><h2>Welcome you</h2></center>
     <center><div style="width: 50%;">
         <form action="/insert" method="post">
             <div class="mb-3">
@@ -24,7 +25,6 @@
             <div class="mb-3">
                 <label class="form-label" for="txtURL"> Picture</label>
                 <input type="text" class="form-control" name="txtURL" id="txtURL">
-                <span style="color: red;">{{picError}}</span>
             </div>
             <input type="submit" class="btn btn-primary" value="Insert">
         </form>
