--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,10 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <title>Home page</title>
+    <style>
+        body{
+            background-color: springgreen;
+        }
+    </style>
 </head>
 
 <body>
-    <Center><h1 style="color:skyblue;">ATN Toy Store</h1></Center>
+    <Center><h1 style="color:rgb(241, 11, 11);">ATN Toy Store</h1></Center>
     <center><h2>Welcome you</h2></center>
     <center><div style="width: 50%;">
         <form action="/insert" method="post">
